# imops

./: .gitignore  Cargo.toml  autorefresh  experiments.py  imgconfig.json  imgconfig.toml  notas  pipeline.yml  profile  run  run.sh  sendToSocket  sota_plan.md  view  visual_tests
experiments/: process_image.py  requirements.txt
pichromatic/: Cargo.toml  run
pichromatic-pipeline/: Cargo.toml  build  build-wasm
pichromatic-pipeline/src/: config.rs  dng_metadata.rs  extern_pipeline.rs  lib.rs  modules.rs  pipeline.rs
pichromatic/docs/: ai_demosaic_denoise_research.md
pichromatic/src/: bm3d.rs  cfa.rs  cfa_coeffs.rs  chroma_denoise.rs  contrast.rs  cst.rs  demosaic.rs  exp.rs  highlight_reconstruction.rs  image.rs  lch.rs  lib.rs  pixel.rs  raw.rs  tone_map.rs  vignette.rs
pichromatic/src/film/: blur.rs  colorimetry.rs  constants.rs  error.rs  fixtures.rs  mod.rs  spectrum.rs  types.rs  units.rs
pichromatic/src/film/development/: diffusion.rs  grain.rs  mod.rs  reduction.rs
pichromatic/src/film/exposure/: absorption.rs  capture.rs  halation.rs  mod.rs  radiance.rs  upsample.rs
pichromatic/src/film/scan/: densitometry.rs  invert.rs  mod.rs
pichromatic/src/film/stock/: bw_stub.rs  color_neg_200.rs  ektachrome_e100.rs  ektar_100.rs  fuji_pro_400h.rs  mod.rs  portra_400.rs  trix_400.rs
src/: chromaCompresion.rs  chroma_nr.rs  color_p.rs  conditional_paralell.rs  config.rs  cst.rs  demosaic.rs  denoise.rs  desaturation.rs  file_helpers.rs  helpers.rs  imops.rs  lib.rs  main.rs  mask.rs  nl_means.rs  output.rs  pipeline.rs  pixels.rs  tone_mapping.rs  visual_viewwer.rs  wavelet_nl_means.rs  wavelets.rs
