[package]
name = "filsimrs"
version = "0.1.0"
edition = "2021"

# [lib]
# name = "imops"
# path = "src/lib.rs"

[[bin]]
name = "imops-cli"
path = "src/bin/imops-cli.rs"

[[bin]]
name = "example"
path = "src/bin/example.rs"

[[bin]]
name = "visual_tests"
path = "src/bin/visual_tests.rs"
required-features = ["visual_tests"]

[profile.release]
opt-level = 3
target-cpu = "native"
# lto = "fat"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
pichromatic = {version="0.1.0", path="./pichromatic"}
pichromatic-pipeline = {version="0.1.0", path="./pichromatic-pipeline"}
rawler = "*"
clap = {version="4.6.0", features=["derive"]}

# deps for viewer
eframe = { version = "0.27", optional = true }
egui = { version = "0.27", optional = true }
egui_plot = { version = "0.27", optional = true }
clap_derive = "4.6.0"

[features]
parallel = []
visual_tests = ["dep:eframe", "dep:egui", "dep:egui_plot"]
