[package]
name = "pichromatic-pipeline"
version = "0.1.0"
edition = "2021"
description = "A raw photo developing pipeline "
license = "MIT"

[lib]
name = "pichromatic_pipeline"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = "fat"

[dependencies]
pichromatic = { version = "0.1.0", path = "../pichromatic" }
serde = { version = "1.0.217", features = ["derive"] }
serde_plain = "1.0.2"
serde_with = "*"
serde_json = "*"
toml = "0.8.20"
rayon = "1.10.0"
rawler = "*"
uuid = { version = "*", features = ["js"] }
wasm-bindgen = "*"
